examples/test/testpolicy13647.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13647
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key12: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
          key32: value10
      podSelector:
        matchLabels:
          key18: value22
          key33: value37
          key1: value46
